CallMD/src/objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>Accent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Available_For_Video_Cons__c</fullName>
        <label>Available For Video Cons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_for_audio_cons__c</fullName>
        <label>Available for audio cons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Link__c</fullName>
        <formula>$Label.CallMDSite&amp;&apos;?id=&apos;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Cent__c</fullName>
        <label>Board Cent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallMD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CallMD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangedPasswordDate__c</fullName>
        <label>Changed Password Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Choose_a_time_zone__c</fullName>
        <label>Choose a time zone:</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern US</fullName>
                </value>
                <value>
                    <fullName>Central US</fullName>
                </value>
                <value>
                    <fullName>Mountain US</fullName>
                </value>
                <value>
                    <fullName>Arizona US</fullName>
                </value>
                <value>
                    <fullName>Pacific  US</fullName>
                </value>
                <value>
                    <fullName>Alaska US</fullName>
                </value>
                <value>
                    <fullName>Hawaii US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chose_a_scheduling_option__c</fullName>
        <label>Chose a scheduling option:</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_Password__c</fullName>
        <label>Confirm Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_License_Expiration_Date__c</fullName>
        <label>DEA License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA_License__c</fullName>
        <label>DEA License#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Signed_Options__c</fullName>
        <label>Document Signed Options</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Last_Name__c&amp;&quot; &quot;&amp;Name&amp;&quot; &quot;&amp;Middle_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InActive_Licenses__c</fullName>
        <label>InActive Licenses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Active_Date__c</fullName>
        <label>In Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Active_Reason__c</fullName>
        <label>In Active Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_States__c</fullName>
        <label>License States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Multiple_Prescriptions_Pad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Prescriptions Pad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <label>NPI#</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Options_Comments__c</fullName>
        <label>Options Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Options_Mailed__c</fullName>
        <label>Options Mailed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Rate__c</fullName>
        <label>Payment Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CallMD</fullName>
                </value>
                <value>
                    <fullName>PetMD</fullName>
                </value>
                <value>
                    <fullName>DentalMD</fullName>
                </value>
                <value>
                    <fullName>EducationMD</fullName>
                </value>
                <value>
                    <fullName>CorrectionsMD</fullName>
                </value>
                <value>
                    <fullName>TravelMD</fullName>
                </value>
                <value>
                    <fullName>FitMD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarterly_Number__c</fullName>
        <label>Quarterly Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Password_Date__c</fullName>
        <label>Reset Password Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <label>Reviewer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Security_Answer__c</fullName>
        <label>Security Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Question__c</fullName>
        <label>Security Question</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>What is your pet’s name?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite _____?</fullName>
                </value>
                <value>
                    <fullName>What is your spouse or partner&apos;s mother&apos;s maiden name?</fullName>
                </value>
                <value>
                    <fullName>What are the last five digits of your driver&apos;s license number?</fullName>
                </value>
                <value>
                    <fullName>What were the last four digits of your childhood telephone number?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_ID__c</fullName>
        <label>Signature ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Signature_Url__c</fullName>
        <formula>&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Signature_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <formula>IMAGE(Signature_Url__c,Name,200,80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>inActive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_ID_W_9__c</fullName>
        <label>Tax ID/W-9</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>User name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isChangePassword__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isChangePassword</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isResetPassword__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isResetPassword</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Active ?</label>
        <type>Checkbox</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Middle_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>is_Active__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>